fixed-overflowing-text

--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,10 @@
 #header {
   width: 100%;
-  height: 30px;
+  height: 85vh;
   background-size: cover;
   background-position: center;
   position: relative;
+  padding: 20px;
 }
 
 #particles-js {
